[package]
name = "http-tap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "signal"] }
hyper = { version = "1.4", features = ["http1", "server", "client"] }
http-body-util = "0.1"
http = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
hyper-util = { version = "0.1", features = ["server", "client", "client-legacy", "http1", "tokio"] }
bytes = "1"

[[bin]]
name = "us-http-tap"
path = "src/main.rs"
