[package]
name = "interactive-branch-delete"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
humantime = "2.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
git2 = "0.19"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }

[[bin]]
name = "us-interactive-branch-delete"
path = "src/main.rs"
